--- a/app/src/main/res/layout/activity_place_information.xml
+++ b/app/src/main/res/layout/activity_place_information.xml
@@ -11,32 +11,65 @@
     tools:context="com.mycompany.databaseapp.PlaceInformationActivity">
 
     <TextView
-        android:id="@+id/place_info_fixed_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text=" Welcome to the Place_Information_Activity "/>
-
-
-    <TextView
         android:id="@+id/place_info_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text=" "/>
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:layout_marginTop="132dp"
+        android:layout_below="@+id/place_info_fixed_title"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/place_info_description"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text=" "/>
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:layout_marginTop="70dp"
+        android:layout_below="@+id/place_info_address"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
-        android:id="@+id/homeButton2"
+        android:id="@+id/smallMapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:onClick="onClickStartSmallMapActivity"
         android:text="Small Map" />
+
+    <TextView
+        android:id="@+id/place_info_lat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:layout_marginTop="34dp"
+        android:layout_below="@+id/place_info_title"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp" />
+
+    <TextView
+        android:id="@+id/place_info_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:layout_marginTop="53dp"
+        android:layout_below="@+id/place_info_lat"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/place_info_lon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/place_info_lat"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
 
