--- a/app/src/main/res/layout/activity_small_map.xml
+++ b/app/src/main/res/layout/activity_small_map.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/activity_home"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
@@ -10,22 +11,8 @@ android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
 tools:context="com.mycompany.databaseapp.HomeActivity">
-    <TextView
-        android:id="@+id/place_info_fixed_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="  This is 'SmallMapActivity' "/>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.mycompany.databaseapp.SmallMapActivity" />
-
-<Button
+    <Button
     android:id="@+id/homeButton1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -33,6 +20,16 @@ tools:context="com.mycompany.databaseapp.HomeActivity">
     android:layout_alignParentBottom="true"
     android:onClick="onClickStartHomeActivity"
     android:text="Home" />
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.mycompany.databaseapp.SmallMapActivity"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
