changed font first screen

--- a/app/src/main/res/layout/activity_place_information.xml
+++ b/app/src/main/res/layout/activity_place_information.xml
@@ -8,68 +8,107 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mycompany.databaseapp.PlaceInformationActivity">
+    tools:context="com.mycompany.databaseapp.PlaceInformationActivity"
+    android:background= "@color/white"
+    >
 
-    <TextView
-        android:id="@+id/place_info_title"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=" "
-        android:layout_marginTop="132dp"
-        android:layout_below="@+id/place_info_fixed_title"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:gravity="center_horizontal"
+        >
 
-    <TextView
-        android:id="@+id/place_info_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=" "
-        android:layout_marginTop="70dp"
-        android:layout_below="@+id/place_info_address"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/smallMapButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:onClick="onClickStartSmallMapActivity"
-        android:text="Small Map" />
+            <TextView
 
-    <TextView
-        android:id="@+id/place_info_lat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=" "
-        android:layout_marginTop="34dp"
-        android:layout_below="@+id/place_info_title"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="12dp"
-        android:layout_marginEnd="12dp" />
+                android:gravity="center"
+                android:id="@+id/place_info_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" Place Title"
+                android:fontFamily="sans-serif"
+                android:textSize= "@dimen/text_size_large"
+                android:textColor="@color/darkBlue"
+                />
 
-    <TextView
-        android:id="@+id/place_info_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=" "
-        android:layout_marginTop="53dp"
-        android:layout_below="@+id/place_info_lat"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/place_info_lon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=" "
-        android:layout_marginTop="19dp"
-        android:layout_below="@+id/place_info_lat"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+                <TextView
+                    android:id="@+id/place_info_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:layout_below="@+id/place_info_title"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="11dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/darkBlue"/>
+
+                <Button
+                    android:id="@+id/smallMapButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:onClick="onClickStartSmallMapActivity"
+                    android:text="Small Map"
+                    android:background="@drawable/button"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/place_info_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" "
+                android:layout_below="@+id/place_info_address"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textSize="@dimen/text_size_small"
+                android:layout_marginTop="21dp"
+                android:textColor="@color/darkBlue"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+            <TextView
+                android:id="@+id/place_info_lon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" "
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_weight="1"
+                android:textColor="@color/darkBlue"/>
+
+            <TextView
+                android:id="@+id/place_info_lat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" "
+                android:layout_above="@+id/place_info_lon"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_weight="1"
+                android:textColor="@color/darkBlue"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
 
