--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+
+    <color name="white">#ffffff</color>
+    <color name="yellow">#FDC400</color>
+    <color name="darkBlue">#0090A6</color>
+    <color name="green">#008736</color>
+    <color name="purple">#931D52</color>
+    <color name="turquoise">#90C797</color>
+
+
 </resources>
