--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#ffffff"
+    android:background= "@color/white"
     tools:context="com.mycompany.databaseapp.HomeActivity">
 
         <ImageView
@@ -27,13 +27,14 @@
                     android:layout_centerHorizontal="true"
                     android:orientation="vertical">
                         <TextView
+                            android:id="@+id/text_locals"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif"
                             android:layout_gravity="center"
                             android:textColor="#000000"
                             android:text="made by locals"/>
                         <TextView
+                            android:id="@+id/text_travellers"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif"
