--- a/app/src/main/res/layout/activity_place_information.xml
+++ b/app/src/main/res/layout/activity_place_information.xml
@@ -31,27 +31,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=" Place Title"
-                android:fontFamily="sans-serif"
                 android:textSize= "@dimen/text_size_large"
-                android:textColor="@color/darkBlue"
+                android:textColor="@color/purple"
                 />
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin">
 
-                <TextView
-                    android:id="@+id/place_info_address"
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text=" "
-                    android:layout_below="@+id/place_info_title"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginTop="11dp"
                     android:layout_weight="1"
-                    android:textColor="@color/darkBlue"/>
+                    >
+
+                    <TextView
+                        android:id="@+id/text_address"
+                        android:text="Address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/purple"
+                        android:textSize="@dimen/text_size_medium" />
+
+                    <TextView
+                        android:id="@+id/place_info_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Address Here "
+                        android:layout_below="@+id/place_info_title"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginTop= "@dimen/activity_vertical_margin"
+                        android:layout_weight="1"
+                        android:textColor="@color/purple"
+                        android:textSize="@dimen/text_size_medium"/>
+
+                    
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/smallMapButton"
@@ -60,32 +80,75 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
                     android:onClick="onClickStartSmallMapActivity"
-                    android:text="Small Map"
+                    android:text="Show on Map"
                     android:background="@drawable/button"
                     android:layout_weight="1" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/place_info_description"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" "
-                android:layout_below="@+id/place_info_address"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:textSize="@dimen/text_size_small"
-                android:layout_marginTop="21dp"
-                android:textColor="@color/darkBlue"/>
+                android:layout_weight="1"
+                android:layout_marginTop="@dimen/activity_vertical_margin">
+
+                <TextView
+                    android:id="@+id/text_description"
+                    android:text="Description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/purple"
+                    android:textSize="@dimen/text_size_medium" />
+
+                <TextView
+                    android:text="Describe"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/place_info_description"
+                    android:layout_weight="1"
+                    android:textColor="@color/purple"
+                    android:textSize="@dimen/text_size_small"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
-
-
+        <TextView
+            android:id="@+id/text_LonLat"
+            android:text="Coordinates"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/purple"
+            android:textSize="@dimen/text_size_medium"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+        <TextView
+            android:id="@+id/text_mapgeeks"
+            android:text="(for all you map geeks)"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/purple"
+            android:textSize="@dimen/text_size_small" />
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="@dimen/activity_vertical_margin">
 
+
+            <TextView
+                android:id="@+id/text_lon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" Longitude "
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_weight="1"
+                android:textColor="@color/purple"/>
             <TextView
                 android:id="@+id/place_info_lon"
                 android:layout_width="match_parent"
@@ -95,8 +158,17 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_weight="1"
-                android:textColor="@color/darkBlue"/>
-
+                android:textColor="@color/purple"/>
+            <TextView
+                android:id="@+id/text_lat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" Latitude "
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_weight="1"
+                android:textColor="@color/purple"/>
             <TextView
                 android:id="@+id/place_info_lat"
                 android:layout_width="match_parent"
@@ -106,7 +178,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_weight="1"
-                android:textColor="@color/darkBlue"/>
+                android:textColor="@color/purple"/>
         </LinearLayout>
     </LinearLayout>
 
