--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_size_large">25sp</dimen>
     <dimen name="text_size_medium">18sp</dimen>
-    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_small">14sp</dimen>
+
+    <dimen name="activity_vertical_margin_small">10dp</dimen>
 </resources>
