--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listButton"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="10dp"
-    android:textSize="16sp" android:onClick="onClickStartNewActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="15dp"
+    android:textSize="16sp"
+    android:clickable="true"
+    android:textColor="#008736"
+    android:onClick="onClickStartNewActivity">
 </TextView>
